# python-pdm-template

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
src/app/: cli.py  server.py
tests/: test_backend.py
vscode_templates/: extensions.json  settings.json
