[project]
name = "python-pdm-template"
description = "A Project Template of Python with PDM"
authors = [{ name = "杜 世橋 Du Shiqiao", email = "lucidfrontier.45@gmail.com" }]
license = { text = "MIT" }
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = ["fastapi>=0.100.1", "uvicorn>=0.23.1"]

[project.optional-dependencies]
server = ["uvicorn[standard]>=0.23.1"]

[project.scripts]
app = "app.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "src/app/version.py"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.9.1",
    "ruff>=0.0.291",
    "pyright>=1.1.329",
    "pytest-cov>=4.1.0",
]

[tool.pdm.scripts]
black = "black ."
pyright = "pyright ."
ruff_lint = "ruff ."
ruff_fix = "ruff --fix-only ."
test = "pytest tests --cov=app --cov-report=term --cov-report=xml"
format = { composite = ["ruff_fix", "black"] }
lint = { composite = ["ruff_lint", "pyright"] }
check = { composite = ["format", "lint", "test"] }

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning"]

[tool.black]
target-version = ["py311"]
# add directory names to exclude from analysis
extend-exclude = "deps"

[tool.ruff]
select = ["E", "F", "W"]
target-version = "py311"
# add directory names to exclude from analysis
exclude = ["deps"]

[tool.ruff.per-file-ignores]
"*/__init__.py" = ['F401']

[tool.pyright]
pythonVersion = "3.11"
# add directory names to exclude from analysis
ignore = ["deps"]
