[project]
name = "python-pdm-template"
description = "A Project Template of Python with PDM"
authors = [{ name = "杜 世橋 Du Shiqiao", email = "lucidfrontier.45@gmail.com" }]
license = { text = "MIT" }
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]

[project.optional-dependencies]
server = ["uvicorn[standard]>=0.29.0"]

[project.scripts]
app = "app.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "src/app/version.py"

[tool.pdm.dev-dependencies]
dev = ["ruff>=0.3.7", "pyright>=1.1.358", "pytest-cov>=5.0.0"]

[tool.pdm.scripts]
pyright = "pyright ."
ruff_lint = "ruff check ."
ruff_format = "ruff format ."
ruff_fix = "ruff check --fix-only ."
test = "pytest tests --cov=app --cov-report=term --cov-report=xml"
format = { composite = ["ruff_fix", "ruff_format"] }
lint = { composite = ["ruff_lint", "pyright"] }
check = { composite = ["format", "lint", "test"] }


[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
# add directory names to exclude from analysis
exclude = ["deps"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ['F401']

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# add directory names to exclude from analysis
ignore = ["deps"]
